--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Project Hat v0.2 [Windows]"
+name="Project Cat v0.2 [Windows]"
 platform="Windows Desktop"
 runnable=true
 advanced_options=false
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exports/ph/windows/v0.2/project hat v0.2 (Win).exe"
+export_path="../exports/project cat v0.2/project hat v0.2 (Win).exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -65,7 +65,7 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 
 [preset.1]
 
-name="Project Hat v0.2 [Linux]"
+name="Project Cat v0.2 [Linux]"
 platform="Linux"
 runnable=true
 advanced_options=false
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exports/ph/linux/v0.2/project hat v0.2 (Linux).x86_64"
+export_path="../exports/project cat v0.2/linux/project hat v0.2 (Linux).x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -105,7 +105,7 @@ rm -rf \"{temp_dir}\""
 
 [preset.2]
 
-name="Project Hat v0.2 [Web]"
+name="Project Cat v0.2 [Web]"
 platform="Web"
 runnable=true
 advanced_options=false
