chest system implemented

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Project Cat v0.2 [Windows]"
+name="Project Cat DEMO v0.24 [Windows]"
 platform="Windows Desktop"
 runnable=true
 advanced_options=false
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exports/project cat v0.2/project hat v0.2 (Win).exe"
+export_path="../exports/project cat v0.24/project cat demo v0.24 (Win).exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -65,7 +65,7 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 
 [preset.1]
 
-name="Project Cat v0.2 [Linux]"
+name="Project Cat v0.24 [Linux]"
 platform="Linux"
 runnable=true
 advanced_options=false
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exports/project cat v0.2/linux/project hat v0.2 (Linux).x86_64"
+export_path="../exports/project cat v0.24/project cat v0.24 (Linux).x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -156,7 +156,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../exports/project cat v0.24/project cat demo v0.24 (MacOS).zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
