--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Project Cat DEMO v0.24 [Windows]"
+name="Project Cat DEMO v0.25 [Windows]"
 platform="Windows Desktop"
 runnable=true
 advanced_options=false
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exports/project cat v0.24/project cat demo v0.24 (Win).exe"
+export_path="../exports/v0.25/project cat demo v0.25 (Win).exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -65,7 +65,7 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 
 [preset.1]
 
-name="Project Cat v0.24 [Linux]"
+name="Project Cat v0.25 [Linux]"
 platform="Linux"
 runnable=true
 advanced_options=false
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exports/project cat v0.24/project cat v0.24 (Linux).x86_64"
+export_path="../exports/v0.25/project cat v0.25 (Linux).x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -105,7 +105,7 @@ rm -rf \"{temp_dir}\""
 
 [preset.2]
 
-name="Project Cat v0.2 [Web]"
+name="Project Cat v0.25 [Web]"
 platform="Web"
 runnable=true
 advanced_options=false
@@ -114,7 +114,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exports/ph/web/v0.2/project hat v0.2 (Web).html"
+export_path="../exports/v0.25/project hat v0.25 (Web).html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -147,7 +147,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 
 [preset.3]
 
-name="macOS"
+name="Project Cat DEMO v0.25 [MacOS]"
 platform="macOS"
 runnable=true
 advanced_options=false
@@ -156,7 +156,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exports/project cat v0.24/project cat demo v0.24 (MacOS).zip"
+export_path="../exports/v0.25/project cat demo v0.25 (MacOS).zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
